--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Android Develor &amp; Web Developer.</h3>
             <p class="fst-italic">
-              I am an Android and Web Developer Specialist with a strong foundation in software development with three years of hands-on experience 
+              I am an Android and Web Developer Specialist with a strong foundation in software development with 3+ years of hands-on experience 
               building robust and scalable applications. I have completed Udacity’s Nanodegree programs in Android Development, Web Development, 
               and Intro to Programming, where I mastered technologies such as  Java, Kotlin, SDKs, XML, MVVM and APIs, also HTML, CSS, Python, 
               to create Android and Web applications.
