update present job

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item pb-0">
               <h4>GE Appliance Haier, Louisville KY— Android Developer(remote)</h4>
-              <h5>Jun 2022 - Dec 24</h5>
+              <h5>Jun 2022 - Present</h5>
               <p><em>On Google Play: 
                 <a href="https://play.google.com/store/apps/details?id=com.ge.kitchen&hl=en_US" target="_blank">
                     SmartHQ
