update some words

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Anel Ramirez</h1>
-      <p>I'm <span class="typed" data-typed-items="Android Developer, Web Developer, AI Developer, Freelancer, Android Engineer "></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Engineer, Android Engineer, Web Developer, AI Developer"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/anelandroidprogramer/" class="linkedin" target="_blank" rel="noopener noreferrer">
           <i class="bx bxl-linkedin"></i>
@@ -91,7 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Android Develor &amp; Web Developer.</h3>
             <p class="fst-italic">
-              I am an Android and Web Developer Specialist with a strong foundation in software development with 3+ years of hands-on experience 
+              I am an Android, iOS and Web Developer Specialist with a strong foundation in software development with 3+ years of hands-on experience 
               building robust and scalable applications. I have completed Udacity’s Nanodegree programs in Android Development, Web Development, 
               and Intro to Programming, where I mastered technologies such as  Java, Kotlin, SDKs, XML, MVVM and APIs, also HTML, CSS, Python, 
               to create Android and Web applications.
@@ -909,7 +909,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>NeoRamirez</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
